💄 style most of the page
cinema, trailer, button

--- a/main.html
+++ b/main.html
@@ -8,16 +8,47 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Prompt:wght@100;200;400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Prompt:wght@100;200;400;600;700&display=swap"
       rel="stylesheet"
     />
+    <!-- https://unsplash.com/@ismadragon -->
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
   </head>
   <body>
     <div class="vignette"></div>
     <main>
-      <h1><span>Alien</span> <span>Wilderness</span></h1>
+      <div>
+        <h1><span>Alien</span> <span>Wilderness</span></h1>
+        <p class="cinema">In Cinemas <span>November 1</span></p>
+      </div>
+      <aside>
+        <button>Tickets</button>
+        <div>
+          <ul class="actors">
+            <li>Elise Akkersdijk</li>
+            <li>Kameron Ruqayya Clemensen</li>
+            <li>Sammy Bosch</li>
+            <li>Sahar Naenia Rey</li>
+          </ul>
+        </div>
+        <div class="trailer">
+          <img src="assets/maksim-istomin-99TDjA-Sv0o-unsplash.jpg" />
+          <span class="overlay"></span>
+          <span class="short-text">Trailer</span>
+          <svg
+            class="play-icon"
+            viewBox="0 0 24 24"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M15 12.3301L9 16.6603L9 8L15 12.3301Z"
+              fill="currentColor"
+            />
+          </svg>
+        </div>
+      </aside>
     </main>
   </body>
 </html>
