✨ add meta image

--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
       name="twitter:description"
       content="Alien Wilderness is a thrilling movie about being lost in an unknown wilderness on an alien planet."
     />
-    <meta name="twitter:image:src" content="" />
-    <meta name="og:image" content="" />
+    <meta
+      name="twitter:image:src"
+      content="assets/austronaut-in-wilderness.png"
+    />
+    <meta name="og:image" content="assets/austronaut-in-wilderness.png" />
     <meta name="og:site_name" content="Alien Wilderness" />
     <meta name="og:title" content="Alien Wilderness" />
     <meta
