🩹 fix meta data

--- a/index.html
+++ b/index.html
@@ -14,22 +14,39 @@
       name="keywords"
       content="alien, movie, poster, wilderness, thriller, scary"
     />
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://alien-wilderness.vercel.app/" />
+    <meta property="og:site_name" content="Alien Wilderness" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Alien Wilderness" />
+    <meta
+      property="og:description"
+      content="Alien Wilderness is a thrilling movie about being lost in an unknown wilderness on an alien planet."
+    />
+    <meta
+      property="og:image"
+      content="https://alien-wilderness.vercel.app/assets/austronaut-in-wilderness.png"
+    />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@braweria" />
+    <meta property="twitter:domain" content="alien-wilderness.vercel.app" />
+    <meta
+      property="twitter:url"
+      content="https://alien-wilderness.vercel.app/"
+    />
+    <meta name="twitter:title" content="Alien Wilderness" />
     <meta
       name="twitter:description"
       content="Alien Wilderness is a thrilling movie about being lost in an unknown wilderness on an alien planet."
     />
     <meta
-      name="twitter:image:src"
-      content="assets/austronaut-in-wilderness.png"
+      name="twitter:image"
+      content="https://alien-wilderness.vercel.app/assets/austronaut-in-wilderness.png"
     />
-    <meta name="og:image" content="assets/austronaut-in-wilderness.png" />
-    <meta name="og:site_name" content="Alien Wilderness" />
-    <meta name="og:title" content="Alien Wilderness" />
-    <meta
-      name="og:description"
-      content="Alien Wilderness is a thrilling movie about being lost in an unknown wilderness on an alien planet."
-    />
+
     <!-- https://unsplash.com/@ismadragon -->
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
