--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       content="https://alien-wilderness.vercel.app/assets/austronaut-in-wilderness.png"
     />
 
-    <!-- https://unsplash.com/@ismadragon -->
+    <!-- Alien Wilderness Style and Script -->
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
   </head>
